# OpenAssistant.py

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: first_step.py
openassistant/: __init__.py  assistant.py
openassistant/dbs/: client.py  schemas.py
openassistant/server/: __init__.py  app.py
openassistant/server/routes/: router.py
