[tool.poetry]
name = "openassistant"
version = "0.1.0"
description = "Open source and self hosted alternative for OpenAI Assistant API"
authors = ["Tanmaypatil123 <tanmaypatil3151@gmail.com>"]
license = "MIT LICENSE"
readme = "README.md"
packages = [{include = "openassistant"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
langchain = "^0.1.5"
llama-index = "^0.9.41"
langchain-google-genai = "^0.0.6"
chromadb = "^0.4.22"
sqlmodel = "^0.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
